<resources>
    <string name="app_name">Multiboard</string>
    <string name="text_sign_in">Sign in with Google to start using Multiboard!</string>
    <string name="text_card_name">Whiteboard Name</string>
    <string name="text_card_dist">Distance: %.0f meters</string>
    <string name="text_card_ink_level">Ink level: %.1f%%</string>
    <string name="default_dist_text">Distance: Unavailable</string>
    <string name="dist_text_available">Available!</string>
    <string name="text_board_name_default">Whiteboard</string>
    <string name="item_black_name">Black</string>
    <string name="item_red_name">Red</string>
    <string name="item_orange_name">Orange</string>
    <string name="item_yellow_name">Yellow</string>
    <string name="item_green_name">Green</string>
    <string name="item_blue_name">Blue</string>
    <string name="item_purple_name">Purple</string>
    <string name="item_pink_name">Pink</string>
    <string name="item_brown_name">Brown</string>
    <string name="item_large_name">Large Brush</string>
    <string name="item_medium_name">Medium Brush</string>
    <string name="item_small_name">Small Brush</string>
    <string name="img_ink_meter">An image of a bottle of ink showing how much ink you have remaining.</string>
    <string name="item_sign_out_name">Sign out</string>
</resources>
